fixed horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
     height: 6rem;
     width: 3.6rem;
     position: relative;
-    top: 7.5rem;
+    top: 0;
     right: 0;
     z-index: 2000;
     cursor: pointer; }
@@ -40,7 +40,6 @@ body {
     position: relative;
     top: -10rem;
     right: -10rem;
-    background-color: #000;
     z-index: 1000;
     transition: all .2s; }
   .navigation__nav {
@@ -52,7 +51,8 @@ body {
     z-index: 1500;
     opacity: 0;
     width: 0;
-    transition: all .2s; }
+    transition: all .2s;
+    background-color: #000; }
   .navigation__list {
     position: absolute;
     top: 50vh;
@@ -105,7 +105,8 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  width: 100vw; }
+  width: 100vw;
+  overflow: hidden; }
 
 .slides-container {
   flex: 1; }
