--- a/sass/layout/_slide.scss
+++ b/sass/layout/_slide.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   // height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .slides-container {
   flex: 1;
-  // overflow: auto;
 }
 
 .slide {
